# obsidian-zed

./: .gitignore  CONFIGURACION_MANUAL.md  Cargo.toml  README.md  build.sh  extension.toml  parch.bash
language-server/: package-lock.json  package.json
language-server/src/: generate-graph.ts  graph-generator.ts  index.ts  insert-template.ts
languages/markdown/: config.toml
scripts/: create_manual_guide.py  patch_settings.py  patch_tasks.py
src/: lib.rs
