[package]
name = "obsidian-vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# zed_extension_api 0.2+ soporta wasm32-wasip1 (Rust ≥ 1.78) y wasm32-wasi
zed_extension_api = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Indica a Cargo qué targets WASM son válidos para este crate
[package.metadata.zed]
wasm-targets = ["wasm32-wasip1", "wasm32-wasi"]
